--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,21 @@ body, html, .App, #root, .auth-wrapper {
   background-color: #ffffff;
   box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
 }
+#bb {
+  width:40%;
+  align-self: start;
+  background-color: #1a1f71;;
+}
+#bd {
+  width:15%;
+  align-self: center;
+  background-color: #1a1f71;;
+}
+#tips{
+  width: 70%;
+  height: 150px;
+  background-color: white;
+}
 
 .auth-wrapper {
   display: flex;
