--- a/src/pages/Dashboard/components/sidePanel.css
+++ b/src/pages/Dashboard/components/sidePanel.css
@@ -19,6 +19,10 @@
     padding-top: 2.5em;
 }
 
+.sidepanel .active {
+    color: #faaa13;
+}
+
 @media(max-width:767px) {
     .sidepanel {
         width: 100%;
