--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,7 @@ body, html, .App, #root, .auth-wrapper {
 
 .auth-inner {
   width: 450px;
+  max-width: 100%;
   margin: auto;
   background: #ffffff;
   box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
