--- a/src/pages/Dashboard/Display/ScoreDisplay.scss
+++ b/src/pages/Dashboard/Display/ScoreDisplay.scss
@@ -1,11 +1,11 @@
-$primary-color: #5dc3be;
-$circle-bg: #4a4e4b;
+$primary-color: #1a1f71;
+$circle-bg:#C6CFCF;
 $circle-width: .14em;
 $circle-width-hover: 0.1em;
 $global-transition: all .25s ease-in;
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 // body {
-//   font-family: Montserrat;
+//   font-family: Montserrat; 
 // }
 
 /**
@@ -54,7 +54,7 @@ $global-transition: all .25s ease-in;
     width: 100%;
     line-height: 5em;
     font-size: 0.2em;
-    color: $circle-bg;
+    color: #1a1f71;
     display: block;
     text-align: center;
     white-space: nowrap;
@@ -146,8 +146,8 @@ $global-transition: all .25s ease-in;
   width: 360px;
   margin: 0 auto;
   text-align: center; 
-  padding: 2rem;
-  float:right;
+ // padding: 2rem;
+  // float:right;
   header {
     margin-bottom: 1.5rem;
     text-transform: uppercase;
@@ -159,20 +159,27 @@ $global-transition: all .25s ease-in;
     }
   }
 }
-#sameline{
-    display: flex;
-    justify-content: flex-end;
+
+#Overall{
+  text-align: center;
+  font-size: 30px;
+  font-weight: 700;
+  color: #1a1f71;
+}
+#sub{
+  text-align: center;
+}
+#td{
+  padding: 20px;
 }
 
-#recoveryScore{
-    font-size: 45px;
-    font-weight: 300;
-    font-style: Montserrat ;
-    color: #1a1f71;
-}
-#subScore{
-  font-size: 35px;
-  font-weight: 200;
-  font-style: Montserrat ;
-  color: #1a1f71;
+
+
+
+
+#td1, #td2{
+  padding: 120px;
+  padding-top: 0px;
+  padding-right: 50px;
+  padding-bottom: 0px;
 }
